; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xact.c_MarkCurrentTransactionIdLoggedIfAny.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xact.c_MarkCurrentTransactionIdLoggedIfAny.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@CurrentTransactionState = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MarkCurrentTransactionIdLoggedIfAny() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CurrentTransactionState, align 8
  %2 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 1
  %3 = load i32, i32* %2, align 4
  %4 = call i64 @FullTransactionIdIsValid(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CurrentTransactionState, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  store i32 1, i32* %8, align 4
  br label %9

9:                                                ; preds = %6, %0
  ret void
}

declare dso_local i64 @FullTransactionIdIsValid(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
